Stats spacing corrected

--- a/app/styles/home-view.sass
+++ b/app/styles/home-view.sass
@@ -277,10 +277,17 @@
           margin: 10px auto 15px
 
     #teachers-love-codecombat
-      padding: 30px
+      padding: 45px 0 31px 0
+      .row
+        padding: 59px 0
       p.mcrel-blurb
         color: white
         font-style: italic
+        margin-bottom: 0
+      // Let's us center column
+      .width-320
+        max-width: 320px
+        display: inline-block
 
     #quotes
       background-color: $navy
